User session version, chat rooms - User sessions have a version ID so that if the structure of user sessions changes, old ones can be invalidated - User display name is loaded in to user sesson - New user ID generator fixed - Added functionality for handling action messages in root chat - Adding a room sends an action message to chat - Moved chat add socket access to the chat socket - Chat users are now colored based on an alogrithm on their custom ID - Fixed issue where chat time differences were showing up for gaps smaller than 15 minutes - Removed old, commented-out code chunk for adding chat messages to board - Date headers in chat have curly decorations - Time differences are now gray instead of black

--- a/mainweb/views/chat.css
+++ b/mainweb/views/chat.css
@@ -156,6 +156,7 @@ main > table {
 	margin: 5px 10px;
 	border-left: 2px solid hsl(216,45%,92%);
 	padding: 10px;
+	color: rgba(0, 0, 0, 0.5);
 }
 
 /* Chatlog's actions */
